[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/GameOver/Score.gd" type="Script" id=1]
[ext_resource path="res://UI/theme/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/UI/SimplePixelArtUIpack/Artwork/ColorCustomizible/square/background.png" type="Texture" id=3]

[node name="GameOver" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.407843 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.5
margin_top = -110.0
margin_right = 198.5
margin_bottom = 110.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 441.0
margin_top = 275.0
margin_right = 559.0
margin_bottom = 355.0

[node name="Retry" type="Button" parent="VBoxContainer"]
margin_right = 118.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Retry"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 118.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Main Menu"

[node name="Tween" type="Tween" parent="."]

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -74.0
margin_right = 60.0
margin_bottom = -37.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over"

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
